hard-gists/95c66d564c58361ecf9f/run.log
=== Docker Run Log for 95c66d564c58361ecf9f ===
Started at: Mi 29. Okt 18:28:33 CET 2025

[2025-10-29 18:28:33] START: Running container for 95c66d564c58361ecf9f
[2025-10-29 18:28:33] SUCCESS: Container 74d9ad2e6ef8805e7cb2dac41d6f8d7d6ef10976c78af24130fc417bce340b0c started for 95c66d564c58361ecf9f
=== Container logs for 95c66d564c58361ecf9f ===
  File "/snippet.py", line 125
    print "Sensitivity: {:d}".format(sensor.mtreg)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 95c66d564c58361ecf9f ===
[2025-10-29 18:28:35] INFO: Container 74d9ad2e6ef8805e7cb2dac41d6f8d7d6ef10976c78af24130fc417bce340b0c has stopped
